Package_Tools/include-C/suitesparse/fertig/SuiteSparse_config.h

    #define SUITESPARSE_OPENMP_MAX_THREADS       omp_get_max_threads ( )
    #define SUITESPARSE_OPENMP_GET_NUM_THREADS   omp_get_num_threads ( )
    #define SUITESPARSE_OPENMP_GET_WTIME         omp_get_wtime ( )
    #define SUITESPARSE_OPENMP_GET_THREAD_ID     omp_get_thread_num ( )
    #define SUITESPARSE_OPENMP_MAX_THREADS       (1)
    #define SUITESPARSE_OPENMP_GET_NUM_THREADS   (1)
    #define SUITESPARSE_OPENMP_GET_WTIME         (0)
    #define SUITESPARSE_OPENMP_GET_THREAD_ID     (0)
#define SUITESPARSE_COMPILER_NVCC    0
#define SUITESPARSE_COMPILER_ICX     0
#define SUITESPARSE_COMPILER_ICC     0
#define SUITESPARSE_COMPILER_CLANG   0
#define SUITESPARSE_COMPILER_GCC     0
#define SUITESPARSE_COMPILER_MSC     0
#define SUITESPARSE_COMPILER_XLC     0
#define SUITESPARSE_STDC_VERSION __STDC_VERSION__
#define SUITESPARSE_STDC_VERSION 199001L
void *(*SuiteSparse_config_malloc_func_get (void)) (size_t);
void *(*SuiteSparse_config_calloc_func_get (void)) (size_t, size_t);
void *(*SuiteSparse_config_realloc_func_get (void)) (void *, size_t);
void (*SuiteSparse_config_free_func_get (void)) (void *);
int (*SuiteSparse_config_printf_func_get (void)) (const char *, ...);
double (*SuiteSparse_config_hypot_func_get (void)) (double, double);
int (*SuiteSparse_config_divcomplex_func_get (void)) (double, double, double, double, double *, double *);
void SuiteSparse_config_malloc_func_set (void *(*malloc_func) (size_t));
void SuiteSparse_config_calloc_func_set (void *(*calloc_func) (size_t, size_t));
void SuiteSparse_config_realloc_func_set (void *(*realloc_func) (void *, size_t));
void SuiteSparse_config_free_func_set (void (*free_func) (void *));
void SuiteSparse_config_printf_func_set (int (*printf_func) (const char *, ...));
void SuiteSparse_config_hypot_func_set (double (*hypot_func) (double, double));
void SuiteSparse_config_divcomplex_func_set (int (*divcomplex_func) (double, double, double, double, double *, double *));
void *SuiteSparse_config_malloc (size_t s) ;
void *SuiteSparse_config_calloc (size_t n, size_t s) ;
void *SuiteSparse_config_realloc (void *, size_t s) ;
void SuiteSparse_config_free (void *) ;
double SuiteSparse_config_hypot (double x, double y) ;
int SuiteSparse_config_divcomplex
(
    double xr, double xi, double yr, double yi, double *zr, double *zi
) ;
void SuiteSparse_start ( void ) ;   
void SuiteSparse_finish ( void ) ;  
void *SuiteSparse_malloc    
(
    size_t nitems,          
    size_t size_of_item     
) ;
void *SuiteSparse_calloc    
(
    size_t nitems,          
    size_t size_of_item     
) ;
void *SuiteSparse_realloc   
(
    size_t nitems_new,      
    size_t nitems_old,      
    size_t size_of_item,    
    void *p,                
    int *ok                 
) ;
void *SuiteSparse_free      
(
    void *p                 
) ;
void SuiteSparse_tic    
(
    double tic [2]      
) ;
double SuiteSparse_toc  
(
    double tic [2]      
) ;
double SuiteSparse_time  
(
    void
) ;
double SuiteSparse_hypot (double x, double y) ;
int SuiteSparse_divcomplex
(
    double ar, double ai,       
    double br, double bi,       
    double *cr, double *ci      
) ;
int SuiteSparse_version     
(
    int version [3]
) ;
#define SUITESPARSE_DATE "Mar 2, 2024"
#define SUITESPARSE_MAIN_VERSION    7
#define SUITESPARSE_SUB_VERSION     6
#define SUITESPARSE_SUBSUB_VERSION  1
#define SUITESPARSE_VER_CODE(main,sub) ((main) * 1000 + (sub))
#define SUITESPARSE_VERSION SUITESPARSE_VER_CODE(7, 6)
#define SUITESPARSE__VERCODE(main,sub,patch) \
    (((main)*1000ULL + (sub))*1000ULL + (patch))
#define SUITESPARSE__VERSION SUITESPARSE__VERCODE(7,6,1)
void SUITESPARSE_BLAS_DGEMV
(
    const char *trans,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const double *alpha,
    const double *A,
    const SUITESPARSE_BLAS_INT *lda,
    const double *X,
    const SUITESPARSE_BLAS_INT *incx,
    const double *beta,
    double *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_SGEMV
(
    const char *trans,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const float *alpha,
    const float *A,
    const SUITESPARSE_BLAS_INT *lda,
    const float *X,
    const SUITESPARSE_BLAS_INT *incx,
    const float *beta,
    float *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_ZGEMV
(
    const char *trans,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *X,
    const SUITESPARSE_BLAS_INT *incx,
    const void *beta,
    void *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_CGEMV
(
    const char *trans,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *X,
    const SUITESPARSE_BLAS_INT *incx,
    const void *beta,
    void *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_DTRSV
(
    const char *uplo,
    const char *trans,
    const char *diag,
    const SUITESPARSE_BLAS_INT *n,
    const double *A,
    const SUITESPARSE_BLAS_INT *lda,
    double *X,
    const SUITESPARSE_BLAS_INT *incx
) ;
void SUITESPARSE_BLAS_STRSV
(
    const char *uplo,
    const char *trans,
    const char *diag,
    const SUITESPARSE_BLAS_INT *n,
    const float *A,
    const SUITESPARSE_BLAS_INT *lda,
    float *X,
    const SUITESPARSE_BLAS_INT *incx
) ;
void SUITESPARSE_BLAS_ZTRSV
(
    const char *uplo,
    const char *trans,
    const char *diag,
    const SUITESPARSE_BLAS_INT *n,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    void *X,
    const SUITESPARSE_BLAS_INT *incx
) ;
void SUITESPARSE_BLAS_CTRSV
(
    const char *uplo,
    const char *trans,
    const char *diag,
    const SUITESPARSE_BLAS_INT *n,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    void *X,
    const SUITESPARSE_BLAS_INT *incx
) ;
void SUITESPARSE_BLAS_DTRSM
(
    const char *side,
    const char *uplo,
    const char *transa,
    const char *diag,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const double *alpha,
    const double *A,
    const SUITESPARSE_BLAS_INT *lda,
    double *B,
    const SUITESPARSE_BLAS_INT *ldb
) ;
void SUITESPARSE_BLAS_STRSM
(
    const char *side,
    const char *uplo,
    const char *transa,
    const char *diag,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const float *alpha,
    const float *A,
    const SUITESPARSE_BLAS_INT *lda,
    float *B,
    const SUITESPARSE_BLAS_INT *ldb
) ;
void SUITESPARSE_BLAS_ZTRSM
(
    const char *side,
    const char *uplo,
    const char *transa,
    const char *diag,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    void *B,
    const SUITESPARSE_BLAS_INT *ldb
) ;
void SUITESPARSE_BLAS_CTRSM
(
    const char *side,
    const char *uplo,
    const char *transa,
    const char *diag,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    void *B,
    const SUITESPARSE_BLAS_INT *ldb
) ;
void SUITESPARSE_BLAS_DGEMM
(
    const char *transa,
    const char *transb,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const double *alpha,
    const double *A,
    const SUITESPARSE_BLAS_INT *lda,
    const double *B,
    const SUITESPARSE_BLAS_INT *ldb,
    const double *beta,
    double *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_SGEMM
(
    const char *transa,
    const char *transb,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const float *alpha,
    const float *A,
    const SUITESPARSE_BLAS_INT *lda,
    const float *B,
    const SUITESPARSE_BLAS_INT *ldb,
    const float *beta,
    float *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_ZGEMM
(
    const char *transa,
    const char *transb,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *B,
    const SUITESPARSE_BLAS_INT *ldb,
    const void *beta,
    void *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_CGEMM
(
    const char *transa,
    const char *transb,
    const SUITESPARSE_BLAS_INT *m,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *B,
    const SUITESPARSE_BLAS_INT *ldb,
    const void *beta,
    void *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_DSYRK
(
    const char *uplo,
    const char *trans,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const double *alpha,
    const double *A,
    const SUITESPARSE_BLAS_INT *lda,
    const double *beta,
    double *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_SSYRK
(
    const char *uplo,
    const char *trans,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const float *alpha,
    const float *A,
    const SUITESPARSE_BLAS_INT *lda,
    const float *beta,
    float *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_ZHERK
(
    const char *uplo,
    const char *trans,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *beta,
    void *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_BLAS_CHERK
(
    const char *uplo,
    const char *trans,
    const SUITESPARSE_BLAS_INT *n,
    const SUITESPARSE_BLAS_INT *k,
    const void *alpha,
    const void *A,
    const SUITESPARSE_BLAS_INT *lda,
    const void *beta,
    void *C,
    const SUITESPARSE_BLAS_INT *ldc
) ;
void SUITESPARSE_LAPACK_DPOTRF
(
    const char *uplo,
    const SUITESPARSE_BLAS_INT *n,
    double *A,
    const SUITESPARSE_BLAS_INT *lda,
    SUITESPARSE_BLAS_INT *info
) ;
void SUITESPARSE_LAPACK_SPOTRF
(
    const char *uplo,
    const SUITESPARSE_BLAS_INT *n,
    float *A,
    const SUITESPARSE_BLAS_INT *lda,
    SUITESPARSE_BLAS_INT *info
) ;
void SUITESPARSE_LAPACK_ZPOTRF
(
    const char *uplo,
    const SUITESPARSE_BLAS_INT *n,
    void *A,
    const SUITESPARSE_BLAS_INT *lda,
    SUITESPARSE_BLAS_INT *info
) ;
void SUITESPARSE_LAPACK_CPOTRF
(
    const char *uplo,
    const SUITESPARSE_BLAS_INT *n,
    void *A,
    const SUITESPARSE_BLAS_INT *lda,
    SUITESPARSE_BLAS_INT *info
) ;
void SUITESPARSE_BLAS_DSCAL
(
    const SUITESPARSE_BLAS_INT *n,
    const double *alpha,
    double *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_SSCAL
(
    const SUITESPARSE_BLAS_INT *n,
    const float *alpha,
    float *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_ZSCAL
(
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    void *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;
void SUITESPARSE_BLAS_CSCAL
(
    const SUITESPARSE_BLAS_INT *n,
    const void *alpha,
    void *Y,
    const SUITESPARSE_BLAS_INT *incy
) ;